--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -104,11 +104,13 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 170px;
+    height: 100%;
+
     margin-top: 40px;
     margin-bottom: 15px;
+    
     border: solid;
-    border-color: white;
+    border-color: rgb(255, 255, 255);
     border-radius: 1em;
   }
   
@@ -360,7 +362,7 @@
     flex-direction: column;
     justify-content: center;
     width: 100%;
-    height: 170px;
+    height: 100%;
     margin-top: 40px;
     margin-bottom: 15px;
 
